Increases button and link contrast. Fixes #13

--- a/www/sass/_base.scss
+++ b/www/sass/_base.scss
@@ -196,7 +196,7 @@ label {
 }
 .btn-orange {
   @extend a.ondark;
-  color: #f85628;
+  color: #3C3C3C;
   background-color: #fff;
   border: 1px solid #f85628;
   margin-left: 0 !important;
